--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# my gitignore
+.sass-cache/
+*.css.map
+.idea
+*.*~
+.DS_Store
+Thumbs.db
